Opened 5 weeks ago

Closed 5 weeks ago

Last modified 5 weeks ago

#19327 closed bug (fixed)

PANIC: vm_page_fault: unhandled page fault in kernel space when installing packages

Reported by: jmairboeck Owned by: waddlesplash
Priority: normal Milestone: R1/beta6
Component: File Systems/packagefs Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #13777, #16811
Platform: All

Description

I got this KDL when installing local packages and uninstalling some at the same time using pkgman in Terminal:

package_daemon: [343695042:    70] CommitTransactionHandler::_ChangePackageActivation(): activating 2, deactivating 8 packages
unknown: [343731941:    70] Volume::_ChangeActivation(): 2 new packages, 8 old packages
slab memory manager: created area 0xffffffff96801000 (16623)
unknown: [344012212:    70] package "texlive-2023-2-any.hpkg" deactivated
unknown: [344126041:    70] package "texlive_plaingeneric-2023-2-any.hpkg" deactivated
unknown: [344159352:    70] package "texlive_basic-2023-2-any.hpkg" deactivated
unknown: [344216380:    70] package "texlive_pictures-2023-2-any.hpkg" deactivated
unknown: [344315056:    70] package "texlive_latexextra-2023-2-any.hpkg" deactivated
unknown: [344327215:    70] package "texlive_plaingeneric_source-2023-2-any.hpkg" deactivated
unknown: [344357565:    70] package "texlive_latexrecommended-2023-2-any.hpkg" deactivated
unknown: [344385071:    70] package "texlive_latex-2023-2-any.hpkg" deactivated
unknown: [344387604:    70] package "texlive_music_source-2024-1-any.hpkg" activated
unknown: [344550859:    70] package "texlive-2024-1-any.hpkg" activated
package_daemon: [344563474:    70] Volume::_PackagesEntryRemoved("texlive-2023-2-any.hpkg")
package_daemon: [344565242:    70] Volume::_PackagesEntryRemoved("texlive_plaingeneric-2023-2-any.hpkg")
package_daemon: [344567559:    70] Volume::_PackagesEntryRemoved("texlive_basic-2023-2-any.hpkg")
package_daemon: [344569400:    70] Volume::_PackagesEntryRemoved("texlive_pictures-2023-2-any.hpkg")
package_daemon: [344572285:    70] Volume::_PackagesEntryRemoved("texlive_latexextra-2023-2-any.hpkg")
package_daemon: [344574568:    70] Volume::_PackagesEntryRemoved("texlive_plaingeneric_source-2023-2-any.hpkg")
package_daemon: [344577728:    70] Volume::_PackagesEntryRemoved("texlive_latexrecommended-2023-2-any.hpkg")
package_daemon: [344580368:    70] Volume::_PackagesEntryRemoved("texlive_latex-2023-2-any.hpkg")
package_daemon: [344583472:    70] Volume::_PackagesEntryCreated("texlive-2024-1-any.hpkg")
package_daemon: [344587027:    70] Volume::_PackagesEntryCreated("texlive_music_source-2024-1-any.hpkg")
vm_page_fault: vm_soft_fault returned error 'Bad address' on fault at 0x18, ip 0xffffffff81a3e178, write 0, kernel, exec 0, thread 0x1c8
PANIC: vm_page_fault: unhandled page fault in kernel space at 0x18, ip 0xffffffff81a3e178

Welcome to Kernel Debugging Land...
Thread 456 "w>Terminal: packages: pkgman" running on CPU 0
stack trace for thread 456 "w>Terminal: packages: pkgman"
    kernel stack: 0xffffffff81ea3000 to 0xffffffff81ea8000
      user stack: 0x00007fd04ddaa000 to 0x00007fd04ddea000
frame                       caller             <image>:function + offset
 0 ffffffff81ea73d0 (+  32) ffffffff80154340   <kernel_x86_64> arch_debug_call_with_fault_handler + 0x1a
 1 ffffffff81ea7420 (+  80) ffffffff800b83d8   <kernel_x86_64> debug_call_with_fault_handler + 0x78
 2 ffffffff81ea7480 (+  96) ffffffff800b9ac4   <kernel_x86_64> kernel_debugger_loop(char const*, char const*, __va_list_tag*, int) + 0xf4
 3 ffffffff81ea74d0 (+  80) ffffffff800b9e5e   <kernel_x86_64> kernel_debugger_internal(char const*, char const*, __va_list_tag*, int) + 0x6e
 4 ffffffff81ea75c0 (+ 240) ffffffff800ba1f7   <kernel_x86_64> panic + 0xb7
 5 ffffffff81ea76b0 (+ 240) ffffffff8013aa58   <kernel_x86_64> vm_page_fault + 0x298
 6 ffffffff81ea76f0 (+  64) ffffffff8016044e   <kernel_x86_64> x86_page_fault_exception + 0x15e
 7 ffffffff81ea7a58 (+ 872) ffffffff80155c1c   <kernel_x86_64> int_bottom + 0x80
kernel iframe at 0xffffffff81ea7a58 (end = 0xffffffff81ea7b20)
 rax 0x0                   rbx 0xffffffff8017d66f    rcx 0x0
 rdx 0xffffffff81ea7b40    rsi 0xffffffff81a81b10    rdi 0xffffffff82a7c480
 rbp 0xffffffff81ea7b80     r8 0x0                    r9 0xffffffff81a99fc8
 r10 0x0                   r11 0x0                   r12 0xffffffff81ea7b98
 r13 0xffffffff82a7c480    r14 0xffffffff8ea764d0    r15 0x3ff
 rip 0xffffffff81a3e178    rsp 0xffffffff81ea7b20 rflags 0x10246
 vector: 0xe, error code: 0x0
 8 ffffffff81ea7b80 (+ 296) ffffffff81a3e178   <packagefs> packagefs_lookup(fs_volume*, fs_vnode*, char const*, long*) + 0x88
 9 ffffffff81ea7bc0 (+  64) ffffffff80105e2c   <kernel_x86_64> lookup_dir_entry(vnode*, char const*, vnode**) + 0x8c
10 ffffffff81ea7d50 (+ 400) ffffffff80106092   <kernel_x86_64> dir_vnode_to_path(vnode*, char*, unsigned long, bool) + 0x142
11 ffffffff81ea7db0 (+  96) ffffffff8010d842   <kernel_x86_64> vfs_entry_ref_to_path + 0x1b2
12 ffffffff81ea7f20 (+ 368) ffffffff801107ca   <kernel_x86_64> _user_entry_ref_to_path + 0x10a
13 ffffffff81ea7f30 (+  16) ffffffff80155f1f   <kernel_x86_64> x86_64_syscall_entry + 0xfb
user iframe at 0xffffffff81ea7f30 (end = 0xffffffff81ea7ff8)
 rax 0x6f                  rbx 0x7fd04dde9b70        rcx 0x5629dd0cbc
 rdx 0x124605886cc0        rsi 0x8320                rdi 0x4
 rbp 0x7fd04dde9b30         r8 0x400                  r9 0x7fd04dde9b70
 r10 0x7fd04dde9710        r11 0x202                 r12 0x7fd04dde9b90
 r13 0x7fd04dde9710        r14 0x7fd04dde9b68        r15 0x7fd04dde9b90
 rip 0x5629dd0cbc          rsp 0x7fd04dde9708     rflags 0x202
 vector: 0x63, error code: 0x0
14 00007fd04dde9b30 (+   0) 0000005629dd0cbc   <libroot.so> _kern_entry_ref_to_path + 0x0c
15 00007fd04dde9c30 (+ 256) 00000153a8cbb354   <_APP_> Shell::GetActiveProcessInfo const(ActiveProcessInfo&) + 0x164
16 00007fd04dde9d80 (+ 336) 00000153a8ccfa97   <_APP_> TermWindow::_UpdateSessionTitle(int) + 0xb7
17 00007fd04dde9db0 (+  48) 00000153a8ccfec5   <_APP_> TermWindow::_UpdateTitles() + 0x35
18 00007fd04dde9e40 (+ 144) 00000152d8419939   <libbe.so> BWindow::task_looper() + 0x1d9
19 00007fd04dde9e60 (+  32) 00000152d835a811   <libbe.so> BLooper::_task0_(void*) + 0x21
20 00007fd04dde9e80 (+  32) 0000005629dd0189   <libroot.so> _thread_do_exit_work (nearest) + 0x89
21 0000000000000000 (+   0) 00007fc5b2952258   <commpage> commpage_thread_exit + 0x00
kdebug> 

hrev58485, x86_64 in VirtualBox

Change History (10)

comment:1 by jmairboeck, 5 weeks ago

The same KDL happens when trying to install the package via HaikuDepot. The KDL also happened in a Terminal window thread. The Terminal was idling this time, but with /boot/system/data/texlive/texmf-dist as working directory, which belongs to the package to be upgraded.

Last edited 5 weeks ago by jmairboeck (previous) (diff)

comment:2 by jmairboeck, 5 weeks ago

Upgrading the package via HaikuDepot without having a Terminal open succeeded.

comment:3 by jmairboeck, 5 weeks ago

The same KDL (crash in Terminal window thread when uninstalling a package) also happens on hrev58477, so it is not a very recent regression.

comment:4 by jmairboeck, 5 weeks ago

I "bisected" it as far as I could with my local states: hrev58159 crashes, hrev58095 doesn't.

comment:5 by jmairboeck, 5 weeks ago

I narrowed it down further with the available hrevs: hrev58124 crashes, hrev58121 doesn't. The two between those aren't available.

comment:6 by waddlesplash, 5 weeks ago

Milestone: UnscheduledR1/beta6
Owner: changed from bonefish to waddlesplash
Status: newassigned

I guess hrev58123~1 is the most likely culprit.

comment:7 by waddlesplash, 5 weeks ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev58496.

comment:8 by waddlesplash, 5 weeks ago

Blocking: 16811 added

comment:9 by waddlesplash, 5 weeks ago

Blocking: 13777 added

comment:10 by jmairboeck, 5 weeks ago

My "test case" has worked now. Thanks for the fix!

Note: See TracTickets for help on using tickets.