packagefs: Make sure the parent directory really exists in lookup().

If the package was uninstalled, then it may not.

Fixes #19327.